<resources>
    <string name="app_name">EcoCrafters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="kembali">Kembali</string>
    <string name="register">Register</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="rumah">Rumah</string>
    <string name="cari">Cari</string>
    <string name="tambahan">Tambahan</string>
    <string name="buat_post">Buat Post</string>
    <string name="scan">Scan</string>
    <string name="follow">Follow</string>
    <string name="keamanan_akun">Keamanan Akun</string>
    <string name="profilku">Profilku</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="username_placeholder">gthght</string>
    <string name="post_disimpan">Post Disimpan</string>
    <string name="bahasa">Bahasa</string>
    <string name="tema_aplikasi">Tema Aplikasi</string>
    <string name="keluar_dari_akun">Keluar Dari Akun</string>
    <string name="points_placeholder">1.800 EcoPoints</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="deskripsi_kode_konfirmasi">Masukkan kode konfirmasi ganti password yang sudah kami kirim ke email anda</string>
    <string name="kode_konfirmasi">Masukkan Kode Konfirmasi</string>
    <string name="konfirmasi_ganti_password">Konfirmasi Ganti Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="kode_berhasil_dikirimkan">Kode Berhasil Dikirimkan</string>
    <string name="email_tidak_valid">Email Tidak Valid!</string>
    <string name="password_anda_kurang_dari_8_karakter">Password Anda Kurang Dari 8 Karakter!</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="karakter_kurang">Karakter Nama Kurang!</string>
    <string name="username_anda_tidak_valid">Username Anda Tidak Valid!</string>
    <string name="informasi_akun_kosong_atau_tidak_valid">Informasi akun kosong atau tidak valid!</string>
    <string name="email_kosong_atau_tidak_valid">Email kosong atau tidak valid!</string>
    <string name="password_tidak_valid">Password tidak valid!</string>
    <string name="tidak_ada_post_yang_dibuat_pengguna">Tidak Ada Post Yang Dibuat Pengguna</string>
    <string name="tidak_ada_komen_yang_dibuat_pengguna">Tidak Ada Komen Yang Dibuat Pengguna</string>
    <string name="tidak_ada_pengikut">Tidak Ada Pengikut</string>
    <string name="pengguna_tidak_mengikuti_siapa_siapa">Pengguna Tidak Mengikuti Siapa-Siapa</string>
    <string name="post">Post</string>
    <string name="komen">Komen</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="tentang">Tentang</string>
    <string name="pengikut">Pengikut</string>
    <string name="supporting_my_account_placeholder">1,800 EcoPoints • 4 Pengikut • 12 Feb, 2023</string>
    <string name="ecopoints_format">%,d EcoPoints</string>
    <string name="overline_comment_user_placeholder">argi_nf • 2 menit yang lalu • 20 🙖</string>
    <string name="title_comment_user_placeholder">Tutorial Bagaimana Cara Membuat Bunga Dari</string>
    <string name="supporting_comment_user_placeholder">Pada suatu waktu di sebuah desa kecil yang dikelilingi oleh ladang-ladang hijau yang luas, tinggallah seorang anak laki-laki bernama Rudi. Rudi adalah seorang anak yang ceria dan penuh imajinasi.</string>
    <string name="user_subtitle_placeholder">%1$,d EcoPoints • %2$s</string>
    <string name="admin">admin</string>
    <string name="tidak_ada_username_yang_ditemukan">Tidak Ada Username Yang Ditemukan</string>
    <string name="cari_post_atau_pengguna">Cari post atau pengguna…</string>
    <string name="pengguna">Pengguna</string>
    <string name="ubah">Ubah</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="tidak_ada_pengguna_yang_ditemukan">Tidak Ada Pengguna Yang Ditemukan</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tidak_diizinkan">Tidak Diizinkan</string>
    <string name="tidak_ada_post_yang_ditemukan">Tidak Ada Post Yang Ditemukan</string>
    <string name="salah_satu_input_kosong">Salah Satu Input Kosong</string>
    <string name="salah_satu_input_tidak_valid">Salah Satu Input Tidak Valid</string>
    <string name="full_name_placeholder">Gilang Raditya</string>
    <string name="tidak_diketahui">Tidak Diketahui</string>
    <string name="unfollow">Unfollow</string>
    <string name="notification">Notification</string>
    <string name="user_avatar">User Avatar</string>
    <string name="tidak_ada_post">Tidak Ada Post</string>
    <string name="tidak_ada_post_yang_disimpan">Tidak Ada Post Yang Disimpan</string>
    <string name="post_title_placeholder">Tutorial Bagaimana Cara Membuat Bunga Dari Sedotan Bekas</string>
    <string name="username_post_placeholder">argi_nf • 3 menit</string>
    <string name="post_content_placeholder">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium…</string>
    <string name="kirim">Kirim</string>
    <string name="tidak_ada_post_yang_didapat">Tidak Ada Post Yang Didapat</string>
    <string name="gambar_judul_post">Gambar Judul Post</string>
    <string name="komen_kosong">Komen Kosong</string>
    <string name="ecopoints">EcoPoints</string>
    <string name="umur_akun">Umur akun</string>
    <string name="komen_yang_dibuat">Komen yang dibuat</string>
    <string name="post_yang_dibuat">Post yang dibuat</string>
    <string name="thumbnail_post">Thumbnail Post</string>
    <string name="tag_post">Tag Post</string>
    <string name="klik_untuk_menambahkan_tag">Klik + untuk menambahkan tag</string>
    <string name="_1_3">1/3</string>
    <string name="judul_post">Judul Post</string>
    <string name="klik_untuk_menambahkan_nthumbnail_post">Klik untuk menambahkan\nthumbnail post</string>
    <string name="thumbnail_kosong">Thumbnail Kosong</string>
    <string name="_2_3">2/3</string>
    <string name="tambahkan_bahan_kerajinan">Tambahkan Bahan Kerajinan</string>
    <string name="bahan_kerajinan">Bahan Kerajinan</string>
    <string name="judul_post_kosong">Judul Post Kosong!</string>
    <string name="_3_3">3/3</string>
    <string name="masukkan_konten_post_disini">Masukkan Konten Post Disini…</string>
    <string name="konten_kosong">Konten Kosong</string>
    <string name="kirim_post_berhasil">Kirim Post Berhasil!</string>
    <string name="title_activity_scan_result">ScanResultActivity</string>
    <string name="pindai">Pindai</string>
</resources>