<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecocrafters.ui.home.HomeFragment"
        android:label="@string/rumah"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.ecocrafters.ui.search.SearchFragment"
        android:label="@string/cari"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.ecocrafters.ui.scan.ScanTrashFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan_trash" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.ecocrafters.ui.create_one.CreatePostStepOneFragment"
        android:label="@string/buat_post"
        tools:layout="@layout/fragment_create_post_step_one" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.ecocrafters.ui.more.MoreFragment"
        android:label="@string/tambahan"
        tools:layout="@layout/fragment_more" />



</navigation>