<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/komen"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_comment"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/batal"
        app:layout_constraintStart_toStartOf="@id/input_comment"
        app:layout_constraintTop_toBottomOf="@id/input_comment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_comment"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/kirim"
        app:layout_constraintEnd_toEndOf="@id/input_comment"
        app:layout_constraintTop_toBottomOf="@id/input_comment" />
</androidx.constraintlayout.widget.ConstraintLayout>