<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.change_password.CheckCodeActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_check_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/konfirmasi_ganti_password" />

    <TextView
        android:id="@+id/textView"
        style="@style/Theme.EcoCrafters.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/kode_konfirmasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_check_code" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Theme.EcoCrafters.BodySmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/deskripsi_kode_konfirmasi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.5" />

    <com.poovam.pinedittextfield.SquarePinField
        android:id="@+id/pin_confirm_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textSelectHandle="@drawable/text_handle"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:fieldBgColor="?colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:noOfFields="6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selanjutnya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_confirm_check" />

    <View
        android:id="@+id/ovelay_check_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@color/color_background_semi_transparent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_check_code" />

    <ProgressBar
        android:id="@+id/pb_check_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ovelay_check_code"
        app:layout_constraintEnd_toEndOf="@id/ovelay_check_code"
        app:layout_constraintStart_toStartOf="@id/ovelay_check_code"
        app:layout_constraintTop_toTopOf="@+id/ovelay_check_code" />


</androidx.constraintlayout.widget.ConstraintLayout>